--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -96,6 +96,7 @@
             @if (User.IsInRole("Admin"))
             {
                 <li><a href="/Admin">Dashboard</a></li>
+                <li><a href="/Admin/Admins">Admins</a></li>
                 <li><a href="/Admin/Members">Members</a></li>
                 <li><a href="/Admin/Routes">Routes</a></li>
                 <li><a href="/Admin/Vehicles">Vehicles</a></li>
